# simulation

./: pyproject.toml  run_test_sitl.sh  sitl.txt  test.py
mavlink/: mavlink.py
mavlink/connection/: __init__.py
mavlink/control/: __init__.py
mavlink/data/: __init__.py
mavlink/processor/: __init__.py
webots/controllers/: webots_vehicle.py
webots/controllers/ardupilot_vehicle_controller/: arducopter_configuration.toml  ardupilot_vehicle_controller.py  drone_data.py  webots_vehicle.py
webots/controllers/mavic2pro_patrol/: dji_configuration.toml  mavic2pro_patrol.py  webots_vehicle.py
webots/params/: iris.parm
webots/protos/: Mavic2Pro.proto
webots/worlds/: iris_idcs.wbt
