[tool.poetry]
name = "simulation"
version = "0.1.0"
description = ""
authors = ["qriwty <arthur.social.rech@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
numpy = "^1.26.4"
toml = "^0.10.2"
pymavlink = "^2.4.41"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
